tests/snapshots/file@limit@too_many_upvalues.lox.snap
---
source: tests/common/mod.rs
description: "fun f() {\n  var v00; var v01; var v02; var v03; var v04; var v05; var v06; var v07;\n  var v08; var v09; var v0a; var v0b; var v0c; var v0d; var v0e; var v0f;\n\n  var v10; var v11; var v12; var v13; var v14; var v15; var v16; var v17;\n  var v18; var v19; var v1a; var v1b; var v1c; var v1d; var v1e; var v1f;\n\n  var v20; var v21; var v22; var v23; var v24; var v25; var v26; var v27;\n  var v28; var v29; var v2a; var v2b; var v2c; var v2d; var v2e; var v2f;\n\n  var v30; var v31; var v32; var v33; var v34; var v35; var v36; var v37;\n  var v38; var v39; var v3a; var v3b; var v3c; var v3d; var v3e; var v3f;\n\n  var v40; var v41; var v42; var v43; var v44; var v45; var v46; var v47;\n  var v48; var v49; var v4a; var v4b; var v4c; var v4d; var v4e; var v4f;\n\n  var v50; var v51; var v52; var v53; var v54; var v55; var v56; var v57;\n  var v58; var v59; var v5a; var v5b; var v5c; var v5d; var v5e; var v5f;\n\n  var v60; var v61; var v62; var v63; var v64; var v65; var v66; var v67;\n  var v68; var v69; var v6a; var v6b; var v6c; var v6d; var v6e; var v6f;\n\n  var v70; var v71; var v72; var v73; var v74; var v75; var v76; var v77;\n  var v78; var v79; var v7a; var v7b; var v7c; var v7d; var v7e; var v7f;\n\n  fun g() {\n    var v80; var v81; var v82; var v83; var v84; var v85; var v86; var v87;\n    var v88; var v89; var v8a; var v8b; var v8c; var v8d; var v8e; var v8f;\n\n    var v90; var v91; var v92; var v93; var v94; var v95; var v96; var v97;\n    var v98; var v99; var v9a; var v9b; var v9c; var v9d; var v9e; var v9f;\n\n    var va0; var va1; var va2; var va3; var va4; var va5; var va6; var va7;\n    var va8; var va9; var vaa; var vab; var vac; var vad; var vae; var vaf;\n\n    var vb0; var vb1; var vb2; var vb3; var vb4; var vb5; var vb6; var vb7;\n    var vb8; var vb9; var vba; var vbb; var vbc; var vbd; var vbe; var vbf;\n\n    var vc0; var vc1; var vc2; var vc3; var vc4; var vc5; var vc6; var vc7;\n    var vc8; var vc9; var vca; var vcb; var vcc; var vcd; var vce; var vcf;\n\n    var vd0; var vd1; var vd2; var vd3; var vd4; var vd5; var vd6; var vd7;\n    var vd8; var vd9; var vda; var vdb; var vdc; var vdd; var vde; var vdf;\n\n    var ve0; var ve1; var ve2; var ve3; var ve4; var ve5; var ve6; var ve7;\n    var ve8; var ve9; var vea; var veb; var vec; var ved; var vee; var vef;\n\n    var vf0; var vf1; var vf2; var vf3; var vf4; var vf5; var vf6; var vf7;\n    var vf8; var vf9; var vfa; var vfb; var vfc; var vfd; var vfe; var vff;\n\n    var oops;\n\n    fun h() {\n      v00; v01; v02; v03; v04; v05; v06; v07;\n      v08; v09; v0a; v0b; v0c; v0d; v0e; v0f;\n\n      v10; v11; v12; v13; v14; v15; v16; v17;\n      v18; v19; v1a; v1b; v1c; v1d; v1e; v1f;\n\n      v20; v21; v22; v23; v24; v25; v26; v27;\n      v28; v29; v2a; v2b; v2c; v2d; v2e; v2f;\n\n      v30; v31; v32; v33; v34; v35; v36; v37;\n      v38; v39; v3a; v3b; v3c; v3d; v3e; v3f;\n\n      v40; v41; v42; v43; v44; v45; v46; v47;\n      v48; v49; v4a; v4b; v4c; v4d; v4e; v4f;\n\n      v50; v51; v52; v53; v54; v55; v56; v57;\n      v58; v59; v5a; v5b; v5c; v5d; v5e; v5f;\n\n      v60; v61; v62; v63; v64; v65; v66; v67;\n      v68; v69; v6a; v6b; v6c; v6d; v6e; v6f;\n\n      v70; v71; v72; v73; v74; v75; v76; v77;\n      v78; v79; v7a; v7b; v7c; v7d; v7e; v7f;\n\n      v80; v81; v82; v83; v84; v85; v86; v87;\n      v88; v89; v8a; v8b; v8c; v8d; v8e; v8f;\n\n      v90; v91; v92; v93; v94; v95; v96; v97;\n      v98; v99; v9a; v9b; v9c; v9d; v9e; v9f;\n\n      va0; va1; va2; va3; va4; va5; va6; va7;\n      va8; va9; vaa; vab; vac; vad; vae; vaf;\n\n      vb0; vb1; vb2; vb3; vb4; vb5; vb6; vb7;\n      vb8; vb9; vba; vbb; vbc; vbd; vbe; vbf;\n\n      vc0; vc1; vc2; vc3; vc4; vc5; vc6; vc7;\n      vc8; vc9; vca; vcb; vcc; vcd; vce; vcf;\n\n      vd0; vd1; vd2; vd3; vd4; vd5; vd6; vd7;\n      vd8; vd9; vda; vdb; vdc; vdd; vde; vdf;\n\n      ve0; ve1; ve2; ve3; ve4; ve5; ve6; ve7;\n      ve8; ve9; vea; veb; vec; ved; vee; vef;\n\n      vf0; vf1; vf2; vf3; vf4; vf5; vf6; vf7;\n      vf8; vf9; vfa; vfb; vfc; vfd; vfe; vff;\n\n      oops; // Error at 'oops': Too many closure variables in function.\n    }\n  }\n}\n"
input_file: crafting_interpreters_test_files/limit/too_many_upvalues.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × too many closure variables in function
    ╭─[49:72]
 48 │     var vf0; var vf1; var vf2; var vf3; var vf4; var vf5; var vf6; var vf7;
 49 │     var vf8; var vf9; var vfa; var vfb; var vfc; var vfd; var vfe; var vff;
    ·                                                                        ─┬─
    ·                                                                         ╰── here
 50 │ 
    ╰────
